# dbt-example

./: .gitignore  .sqlfluff  .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
models/base/: base__corporate_body.sql  schema.yml
seeds/: seed.py
